<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ContactDetailsActivity">

    <TextView
        android:id="@+id/contact_details_name_text_view_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:text="@string/name_text"
        android:textColor="@color/black"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contact_details_name_text_view_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact_details_name_text_view_1" />

    <TextView
        android:id="@+id/contact_details_landline_phone__text_view_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:text="@string/landline_phone_text"
        android:textColor="@color/black"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact_details_name_text_view_2" />

    <TextView
        android:id="@+id/contact_details_landline_phone__text_view_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact_details_landline_phone__text_view_1" />

    <TextView
        android:id="@+id/contact_details_cell_phone__text_view_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:text="@string/cell_phone_text"
        android:textColor="@color/black"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact_details_landline_phone__text_view_2" />

    <TextView
        android:id="@+id/contact_details_cell_phone__text_view_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact_details_cell_phone__text_view_1" />


</androidx.constraintlayout.widget.ConstraintLayout>